src/test/deca/codegen/invalid/no-objects/stack_overflow.res
Erreur : débordement de la pile.
